
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Mesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ea7a66"
        android:gravity="center"
        android:text="@string/text_escolhermesa"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lerQrcode"
        android:layout_width="162dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="240dp"
        android:text="@string/texte_lerqr"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/digitarMesa"
        android:layout_width="162dp"
        android:layout_height="44dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="240dp"
        android:text="@string/text_digitarmesa"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btnQrcode"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="169dp"
        android:layout_height="161dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:contentDescription="@string/btn_qr"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/qr" />

    <ImageButton
        android:id="@+id/btnDigitar"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="169dp"
        android:layout_height="161dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:contentDescription="@string/btn_digitar"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/mesa" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="116dp"
        android:background="#ea7a66"
        android:text="@string/btn_voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>