
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/DigiteNumeroMesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="392dp"
        android:ems="10"
        android:hint="@string/hint_padrao"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mesaSeleção"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ea7a66"
        android:gravity="center"
        android:text="@string/text_selecionar"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVoltarMesa"
        android:layout_width="109dp"
        android:layout_height="46dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="128dp"
        android:background="#ea7a66"
        android:text="@string/btn_voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnConfMesa"
        android:layout_width="109dp"
        android:layout_height="46dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="128dp"
        android:background="#ea7a66"
        android:text="@string/btn_conf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>